--- a/Semperfi/Web.config
+++ b/Semperfi/Web.config
@@ -4,6 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=tcp:vethack-2016.database.windows.net,1433;Initial Catalog=vetappa_db;Persist Security Info=False;User ID=ZfwhyjNQmcuZ;Password=u8WMr7jqgnEp;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
